universities/oxf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rer-oxf-ingress
  namespace: rer-oxf
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: rer.ox.ac.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
    - host: api.rer.ox.ac.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000
